Fix overflowing sponsor images in home screen (#38)

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -114,8 +114,8 @@ main.home
     padding-bottom: 0.7rem
 
   img.sponsor
-    width: auto
-    height: 60px
+    width: 100%
+    height: auto
 
   .sponsors-about
     p
@@ -126,9 +126,8 @@ main.home
       font-weight: 500
 
   img.organizer
-    width: auto
+    width: 100%
     height: auto
-    max-height: 70px
 
   p, li
     font-size: $h5-font-size
